# dexter_rpi_bridge

./: README.md  package.xml  setup.cfg  setup.py
dexter_rpi_bridge/: __init__.py  hardware_node.py  motion_profile.py  pca9685_driver.py  servo_config.py
resource/: dexter_rpi_bridge
scripts/: i2c_test.py  install_rpi.sh  setup_wifi.sh
systemd/: dexter-rpi-bridge.service
