<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dexter_rpi_bridge</name>
  <version>1.0.0</version>
  <description>
    Raspberry Pi hardware bridge for the Dexter dual-arm robot.
    Replaces the ESP32 micro-ROS firmware. Subscribes to /rpi/joint_commands,
    drives PCA9685 servo controllers via I2C, and publishes /rpi/joint_states.
  </description>

  <maintainer email="raj@dexter-robotics.local">Raj</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
